// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValuesOverrideYamlSetting should match snapshot with GIT_REPOSITORY type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <h1
        class="text-neutral-400 text-3xl font-bold mb-2"
      >
        Values override as file
      </h1>
      <p
        class="text-sm text-neutral-350 mb-2"
      >
        Define the YAML file(s) to be applied as override to the default values.yaml delivered with the chart. It is highly recommended to store the override file(s) in a git repository. To get all the Qovery functionalities, add the macro “qovery.labels.service” and "qovery.annotations.service" within the field managing the labels/annotations assigned to the deployed Pods/Deployments/Services/Jobs.
      </p>
      <span
        aria-controls="radix-:rk:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="text-sm cursor-pointer text-brand-500 hover:text-brand-600 transition font-medium mb-5"
        data-state="closed"
        type="button"
      >
        How it works 
        <span
          class="icon-regular-circle-question shrink-0 text-xs"
          role="img"
        />
      </span>
      <button
        class="inline-flex items-center shrink-0 font-medium transition text-sm h-10 px-4 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550 mb-10"
      >
        See default values.yaml 
        <span
          class="icon-solid-arrow-up-right-from-square shrink-0 text-xs ml-2"
          role="img"
        />
      </button>
      <form
        class="w-full"
      >
        <div
          class=""
        >
          <div
            class="input input--select    "
            data-testid="select"
          >
            <label
              class="!text-xs !translate-y-0"
              for="File source"
            >
              File source
            </label>
            <div
              class=" css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-4-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class="input-select__control css-13cymwt-control"
              >
                <div
                  class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                >
                  <span
                    class="text-sm text-neutral-400 mr-1"
                  >
                    Git repository
                  </span>
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-readonly="true"
                    class="css-mohuvp-dummyInput-DummyInput"
                    id="File source"
                    inputmode="none"
                    role="combobox"
                    tabindex="0"
                    value=""
                  />
                </div>
                <div
                  class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="File source"
                type="hidden"
                value="GIT_REPOSITORY"
              />
            </div>
            <input
              name="File source"
              type="hidden"
              value="GIT_REPOSITORY"
            />
            <div
              class="absolute top-1/2 -translate-y-1/2 right-4 pointer-events-none"
            >
              <span
                class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                role="img"
              />
            </div>
          </div>
        </div>
        <section
          class="flex flex-col"
        >
          <h2
            class="text-neutral-400 text-2xl font-bold mt-10 mb-2"
          >
            Override from repository
          </h2>
          <p
            class="text-sm text-neutral-350 mb-6"
          >
            Specify the repository and the path containing the override yaml file to be passed via the “-f” helm argument. More than one file can be used as override by adding them in the path field separated by a semi-colon. If you don’t have a repository, you can set the override manually or via a raw YAML file.
          </p>
          <div
            class="flex flex-col gap-3"
          >
            <div>
              git respository dom
            </div>
          </div>
        </section>
      </form>
    </section>
  </div>
</body>
`;

exports[`ValuesOverrideYamlSetting should match snapshot with NONE type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <h1
        class="text-neutral-400 text-3xl font-bold mb-2"
      >
        Values override as file
      </h1>
      <p
        class="text-sm text-neutral-350 mb-2"
      >
        Define the YAML file(s) to be applied as override to the default values.yaml delivered with the chart. It is highly recommended to store the override file(s) in a git repository. To get all the Qovery functionalities, add the macro “qovery.labels.service” and "qovery.annotations.service" within the field managing the labels/annotations assigned to the deployed Pods/Deployments/Services/Jobs.
      </p>
      <span
        aria-controls="radix-:r6:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="text-sm cursor-pointer text-brand-500 hover:text-brand-600 transition font-medium mb-5"
        data-state="closed"
        type="button"
      >
        How it works 
        <span
          class="icon-regular-circle-question shrink-0 text-xs"
          role="img"
        />
      </span>
      <button
        class="inline-flex items-center shrink-0 font-medium transition text-sm h-10 px-4 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550 mb-10"
      >
        See default values.yaml 
        <span
          class="icon-solid-arrow-up-right-from-square shrink-0 text-xs ml-2"
          role="img"
        />
      </button>
      <form
        class="w-full"
      >
        <div
          class=""
        >
          <div
            class="input input--select    "
            data-testid="select"
          >
            <label
              class="!text-xs !translate-y-0"
              for="File source"
            >
              File source
            </label>
            <div
              class=" css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-2-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class="input-select__control css-13cymwt-control"
              >
                <div
                  class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                >
                  <span
                    class="text-sm text-neutral-400 mr-1"
                  >
                    Git repository
                  </span>
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-readonly="true"
                    class="css-mohuvp-dummyInput-DummyInput"
                    id="File source"
                    inputmode="none"
                    role="combobox"
                    tabindex="0"
                    value=""
                  />
                </div>
                <div
                  class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="File source"
                type="hidden"
                value="GIT_REPOSITORY"
              />
            </div>
            <input
              name="File source"
              type="hidden"
              value="GIT_REPOSITORY"
            />
            <div
              class="absolute top-1/2 -translate-y-1/2 right-4 pointer-events-none"
            >
              <span
                class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                role="img"
              />
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
</body>
`;

exports[`ValuesOverrideYamlSetting should match snapshot with YAML type 1`] = `
<body>
  <div>
    <section
      class="flex flex-col items-start"
    >
      <h1
        class="text-neutral-400 text-3xl font-bold mb-2"
      >
        Values override as file
      </h1>
      <p
        class="text-sm text-neutral-350 mb-2"
      >
        Define the YAML file(s) to be applied as override to the default values.yaml delivered with the chart. It is highly recommended to store the override file(s) in a git repository. To get all the Qovery functionalities, add the macro “qovery.labels.service” and "qovery.annotations.service" within the field managing the labels/annotations assigned to the deployed Pods/Deployments/Services/Jobs.
      </p>
      <span
        aria-controls="radix-:rd:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="text-sm cursor-pointer text-brand-500 hover:text-brand-600 transition font-medium mb-5"
        data-state="closed"
        type="button"
      >
        How it works 
        <span
          class="icon-regular-circle-question shrink-0 text-xs"
          role="img"
        />
      </span>
      <button
        class="inline-flex items-center shrink-0 font-medium transition text-sm h-10 px-4 rounded border border-neutral-250 dark:border-neutral-350 text-neutral-400 dark:text-neutral-300 hover:[&:not(:active)]:border-neutral-300 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none bg-neutral-100 dark:bg-neutral-500 dark:hover:bg-neutral-550 mb-10"
      >
        See default values.yaml 
        <span
          class="icon-solid-arrow-up-right-from-square shrink-0 text-xs ml-2"
          role="img"
        />
      </button>
      <form
        class="w-full"
      >
        <div
          class=""
        >
          <div
            class="input input--select    "
            data-testid="select"
          >
            <label
              class="!text-xs !translate-y-0"
              for="File source"
            >
              File source
            </label>
            <div
              class=" css-b62m3t-container"
            >
              <span
                class="css-1f43avz-a11yText-A11yText"
                id="react-select-3-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                class="css-1f43avz-a11yText-A11yText"
              />
              <div
                class="input-select__control css-13cymwt-control"
              >
                <div
                  class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                >
                  <span
                    class="text-sm text-neutral-400 mr-1"
                  >
                    Git repository
                  </span>
                  <input
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-readonly="true"
                    class="css-mohuvp-dummyInput-DummyInput"
                    id="File source"
                    inputmode="none"
                    role="combobox"
                    tabindex="0"
                    value=""
                  />
                </div>
                <div
                  class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-tj5bde-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="File source"
                type="hidden"
                value="GIT_REPOSITORY"
              />
            </div>
            <input
              name="File source"
              type="hidden"
              value="GIT_REPOSITORY"
            />
            <div
              class="absolute top-1/2 -translate-y-1/2 right-4 pointer-events-none"
            >
              <span
                class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                role="img"
              />
            </div>
          </div>
        </div>
        <section
          class="flex flex-col"
        >
          <h2
            class="text-neutral-400 text-2xl font-bold mt-10 mb-2"
          >
            Override with raw Yaml
          </h2>
          <p
            class="text-sm text-neutral-350 mb-6"
          >
            You can define here the YAML containing the overrides you want to apply. The YAML will be stored by Qovery and can be updated later within the settings but no history will be retained.
          </p>
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="border border-neutral-250 bg-neutral-100 rounded mb-5 w-full"
              data-testid="block-content"
            >
              <div
                class="flex items-center justify-between h-9 px-4 border-b border-neutral-250"
              >
                <h2
                  class="font-medium text-neutral-400 text-ssm"
                >
                  Raw YAML
                </h2>
              </div>
              <div
                class="p-0"
              >
                <div
                  class="text-center my-4 py-5 px-10"
                >
                  <span
                    class="icon-solid-wave-pulse shrink-0 text-neutral-350"
                    role="img"
                  />
                  <p
                    class="text-neutral-350 font-medium text-xs mt-1 mb-3"
                  >
                    No override defined.
                  </p>
                  <button
                    class="inline-flex items-center shrink-0 font-medium transition text-xs h-8 px-3 rounded bg-brand-500 hover:bg-brand-600 text-white disabled:text-brand-300 disabled:bg-brand-100 disabled:border-none"
                    type="button"
                  >
                    Create override 
                    <span
                      class="icon-solid-pen shrink-0 ml-2"
                      role="img"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </section>
      </form>
    </section>
  </div>
</body>
`;
